--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,11 @@
     "https://*/*",
     "contextMenus"
   ],
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "options_ui": {
     "page": "options.html"
   },
@@ -35,6 +40,7 @@
   "browser_action": {
     "default_icon": {
       "16": "icons/icon-16.png",
+      "19": "icons/icon-19.png",
       "48": "icons/icon-48.png",
       "64": "icons/icon-64.png",
       "128": "icons/icon-128.png"
